// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TaxonomyColumnConfiguration component should render column "common_name": common_name 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "hosts": hosts 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/1441288"
  >
    1441288
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  <a
    class="hidden-taxon"
    href="/taxonomy/2787823"
    title="unclassified entries, taxon ID 2787823"
    translate="no"
  >
    unclassified entries
  </a>
   &gt; 
  <a
    href="/taxonomy/12908"
    title="unclassified sequences, taxon ID 12908"
    translate="no"
  >
    unclassified sequences
  </a>
   &gt; 
  <a
    href="/taxonomy/408169"
    title="metagenomes, taxon ID 408169"
    translate="no"
  >
    metagenomes
  </a>
   &gt; 
  <a
    href="/taxonomy/410656"
    title="organismal metagenomes, taxon ID 410656"
    translate="no"
  >
    organismal metagenomes
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "links": links 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=1441288"
        rel="noopener"
        target="_blank"
      >
        www.ncbi.nlm.nih.gov
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "mnemonic": mnemonic 1`] = `
<DocumentFragment>
  9ZZZZ
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "other_names": other_names 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      primate microbiota
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "parent": parent 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/410656"
  >
    organismal metagenomes
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "rank": rank 1`] = `
<DocumentFragment>
  species
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "reviewed": reviewed 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "scientific_name": scientific_name 1`] = `
<DocumentFragment>
  primate metagenome
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "statistics": statistics 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "strains": strains 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "synonyms": synonyms 1`] = `<DocumentFragment />`;
